<resources>
    <string name="app_name">SmartCoach - Business &amp; Life Coaching</string>
    <string name="ic_home">Home</string>
    <string name="ic_community">Community</string>
    <string name="ic_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SCLogo">SmartCoach Logo</string>
    <string name="web_address">www.bizwizlearning.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up!</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already Registered? Sign In!</string>
    <string name="logout">logout</string>

    <string name="facebook_app_id">2383687871850298</string>
    <string name="fb_login_protocol_scheme">fb2383687871850298</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="rate">Rate</string>
    <string name="refer_to_a_friend">Refer to a friend</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>

</resources>
